cmake_minimum_required(VERSION 3.20)
project("binary-cxx")
if(MSVC)
    add_compile_options(/W4 /wd4458)
elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-Wall -Wextra -Wpedantic -Wsign-conversion -Werror)
endif()
add_subdirectory("binary")
add_subdirectory("binary-tests")
enable_testing()
add_test(NAME "BINARY_TESTS" COMMAND "binary-tests")
