cmake_minimum_required(VERSION 3.30)
project("binary-cxx")
if(MSVC)
    add_compile_options(/W4 /wd4458)
elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-Wall -Wextra -Wpedantic -Wsign-conversion -Werror)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        add_compile_options(-fprofile-arcs -ftest-coverage)
        add_link_options(-fprofile-arcs -ftest-coverage -lgcov)
    endif()
endif()
add_subdirectory("binary")
if(BINARY_BUILD_TESTS)
    enable_testing()
    add_subdirectory("binary-tests")
    add_test(NAME "BINARY_TESTS" COMMAND "binary-tests")
endif()
if(BINARY_BUILD_BENCHMARKS)
    add_subdirectory("binary-benchmarks/integration-tests")
endif()
