cmake_minimum_required(VERSION 3.28)
project("binary-experimental")
set(CMAKE_CXX_STANDARD 20)
if(POLICY CMP0167)
    cmake_policy(SET CMP0167 NEW)
endif()
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE "${PROJECT_SOURCE_DIR}/include")
target_link_libraries(${PROJECT_NAME} INTERFACE "binary")
