cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 20)
project("binary-tests")
find_package(Boost REQUIRED COMPONENTS unit_test_framework)
include_directories(${Boost_INCLUDE_DIRS} "../binary/include/")
file(GLOB_RECURSE SOURCE_FILES "binary/*.cpp")
file(GLOB_RECURSE BINARY_HEADER_FILES "../binary/include/*.hpp")
add_executable(${PROJECT_NAME} "main.cpp" ${SOURCE_FILES} ${BINARY_HEADER_FILES})
target_link_libraries(${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
