cmake_minimum_required(VERSION 3.28)
project("binary-benchmarks-integration-tests")
set(CMAKE_CXX_STANDARD 20)
if(POLICY CMP0167)
    cmake_policy(SET CMP0167 NEW)
endif()
find_package(Boost REQUIRED COMPONENTS serialization)
find_package(benchmark REQUIRED)
include_directories(${Boost_INCLUDE_DIRS} "${binary_SOURCE_DIR}/include" "${binary-experimental_SOURCE_DIR}/include")
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${Boost_SERIALIZATION_LIBRARY} benchmark::benchmark "binary")
