cmake_minimum_required(VERSION 3.28)
project("binary-benchmarks-integration-tests")
set(CMAKE_CXX_STANDARD 20)
find_package(benchmark REQUIRED)
include_directories("${binary_SOURCE_DIR}/include")
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} benchmark::benchmark "binary")
